# cellular_raza

./: .docs-header.html  .gitattributes  .gitignore  .gitmodules  CITATION.cff  CONTRIBUTING.md  Cargo.toml  LICENSE.md  README.md  build_website.sh  docker.sh  paper.bib  paper.md  plot.py  publish.sh  rustfmt.toml  update_version.sh
cellular_raza/: Cargo.toml  README.md
cellular_raza-benchmarks/: Cargo.toml
cellular_raza-benchmarks/benches/: cell_sorting.rs  interactions.rs
cellular_raza-benchmarks/plotting/: cell_sorting.py
cellular_raza-benchmarks/src/: cell_sorting.rs  lib.rs
cellular_raza-building-blocks/: .docs-header.html  Cargo.toml  README.md
cellular_raza-building-blocks/.cargo/: config.toml
cellular_raza-building-blocks/src/: lib.rs  prelude.rs
cellular_raza-building-blocks/src/cell_building_blocks/: bacterial_rods.rs  cycle.rs  death.rs  interaction.rs  mechanics.rs  mie_potential.bib  mod.rs  plot_bound_lennard_jones.html  plot_morse_potential.html
cellular_raza-building-blocks/src/cell_models/: custom_cell_nd.rs  mod.rs  modular_cell.rs  pool_bacteria.rs  standard_cell_2d.rs
cellular_raza-building-blocks/src/domains/: cartesian_2d_diffusion.rs  cartesian_cuboid_2_vertex.rs  cartesian_cuboid_2_vertex_old.rs  cartesian_cuboid_n.rs  cartesian_cuboid_n_old.rs  mod.rs
cellular_raza-building-blocks/src/plotting/: cells_2d.rs  mod.rs
cellular_raza-concepts/: Cargo.toml  README.md
cellular_raza-concepts-derive/: Cargo.toml  README.md
cellular_raza-concepts-derive/.cargo/: config.toml
cellular_raza-concepts-derive/src/: cell_agent.rs  domain.rs  lib.rs  subdomain.rs
cellular_raza-concepts/src/: cell.rs  cycle.rs  domain.rs  domain_new.rs  domain_old.rs  errors.rs  interaction.rs  lib.rs  mechanics.rs  plotting.rs  prelude.rs  reactions.rs  reactions_old.rs  test_derive_cell_agent.rs
cellular_raza-concepts/src/concepts/: mod.rs
cellular_raza-concepts/tests/: derive_cell_agent.rs  derive_domain.rs  derive_subdomain.rs
cellular_raza-core/: .docs-header.html  Cargo.toml  README.md  build.rs
cellular_raza-core-derive/: Cargo.toml
cellular_raza-core-derive/.cargo/: config.toml
cellular_raza-core-derive/src/: aux_storage.rs  communicator.rs  from_map.rs  lib.rs  simulation_aspects.rs  testing.rs
cellular_raza-core-derive/tests/: identical.rs  mod.rs
cellular_raza-core-proc-macro/: Cargo.toml  README.md
cellular_raza-core-proc-macro/src/: aux_storage.rs  communicator.rs  from_map.rs  kwargs.rs  lib.rs  run_sim.rs  simulation_aspects.rs  testing.rs
cellular_raza-core/.cargo/: config.toml
cellular_raza-core/doc/: docs-header.html
cellular_raza-core/src/: lib.rs  logging.rs  main.rs  proc_macro.rs  time.rs
cellular_raza-core/src/backend/: mod.rs
cellular_raza-core/src/storage/: concepts.rs  memory_storage.rs  mod.rs  quick_xml.rs  ron.rs  serde_json.rs  sled_database.rs  test.rs
cellular_raza-examples/autophagy/: Cargo.toml  analyze_output.py  potential.ipynb  small_plot.py
cellular_raza-examples/autophagy/src/: main.rs  plotting.rs
cellular_raza-examples/autophagy_pyo3/: .gitignore  Cargo.toml  README.md  analysis.ipynb  autophagy.py  cr_autophagy.py  explore_parameter_space.py  potential.ipynb  pyproject.toml  requirements.txt  run_sim.py  single_run.ipynb
cellular_raza-examples/autophagy_pyo3/src/: lib.rs  particle_properties.rs  simulation.rs
cellular_raza-examples/bacteria_population/: Cargo.toml  README.md
cellular_raza-examples/bacteria_population/src/: bacteria_properties.rs  main.rs  plotting.rs
cellular_raza-examples/bacterial_branching/: Cargo.toml  README.md  requirements.txt
cellular_raza-examples/bacterial_branching/src/: bacteria_properties.rs  main.rs  plotting.py  subdomain.rs
cellular_raza-examples/bacterial_rods/: Cargo.toml  README.md  plot.py  plotter.py  requirements.txt
cellular_raza-examples/bacterial_rods/src/: custom_domain.rs  main.rs
cellular_raza-examples/cell_sorting/: Cargo.toml  README.md  generate_movie.sh  plot.py
cellular_raza-examples/cell_sorting/src/: main-brownian.rs  main-langevin.rs  main.rs  plot.py
cellular_raza-examples/cell_sorting_brownian/: Cargo.toml  generate_movie.sh  plot.py
cellular_raza-examples/cell_sorting_brownian/src/: main.rs
cellular_raza-examples/collision-detection/: Cargo.toml
cellular_raza-examples/collision-detection/src/: main.rs
cellular_raza-examples/diffusion/: Cargo.toml
cellular_raza-examples/diffusion/src/: main.rs
cellular_raza-examples/extracellular-particles/: Cargo.toml
cellular_raza-examples/extracellular-particles/src/: main.rs  plot.py
cellular_raza-examples/homepage-training/: Cargo.toml
cellular_raza-examples/homepage-training/src/: lib.rs
cellular_raza-examples/immersed_boundary/: Cargo.toml  main.py
cellular_raza-examples/immersed_boundary/src/: main.rs
cellular_raza-examples/kidney_organoid_model/: Cargo.toml  generate_movie.sh
cellular_raza-examples/kidney_organoid_model/src/: cell_properties.rs  main.rs  (+1 more)
cellular_raza-examples/organoid_turing_growth/: Cargo.toml  README.md
cellular_raza-examples/pool_model_pyo3/: .gitignore  Cargo.toml  analysis.ipynb  cr_pool_model.py  pool_paper_spatial.py  potential.ipynb  pyproject.toml  requirements.txt  run_sim.py  single_run.ipynb
cellular_raza-examples/power_law/: Cargo.toml  generate_movie.sh
cellular_raza-examples/puzzle/: Cargo.toml  README.md  plot.py  requirements.txt
cellular_raza-examples/semi_vertex/: Cargo.toml  README.md  generate_movie.sh  plot.py
cellular_raza-examples/sender-receiver/: .gitignore  Cargo.toml  README.md  delay.py  extract_plots.py  generate_movie.sh  plot.py
cellular_raza-examples/springs/: Cargo.toml  plot.py  plotter.py
cellular_raza-examples/template/: Cargo.toml
cellular_raza/.cargo/: config.toml
cellular_raza/logos/: Infos.txt
cellular_raza/src/: lib.rs  prelude.rs
cellular_raza/tests/: brownian.rs  brownian_diffusion_constant_approx.rs  contact_reactions.rs  determinism_mechanics_interaction.rs  domain_force_spring.rs  interaction_two_body_problem.rs  plot.py  plot_brownian_langevin.py  storage.rs
(+484 files in other folders)
