[workspace]
members = [
    "cellular_raza-benchmarks",
    "cellular_raza-concepts",
    "cellular_raza-core",
    "cellular_raza-core-proc-macro",
    "cellular_raza-building-blocks",

    # Examples
    # "cellular_raza-examples/*",
    "cellular_raza-examples/bacteria_population",
    "cellular_raza-examples/cell_sorting",
    "cellular_raza-examples/cell_sorting_brownian",
    "cellular_raza-examples/cellular_raza-template",
    "cellular_raza-examples/cellular_raza-template-pyo3",
    "cellular_raza-examples/diffusion",
    "cellular_raza-examples/immersed_boundary",
    "cellular_raza-examples/semi_vertex",
    "cellular_raza-examples/organoid_turing_growth",
    "cellular_raza-examples/pool_model_pyo3",
    "cellular_raza-examples/template",
    "cellular_raza-examples/ureter_signalling",
    "cellular_raza-examples/sender-receiver",
    "cellular_raza-examples/springs",
]
resolver = "2"

[workspace.package]
version = "0.0.10"
authors = ["Jonas Pleyer <jonas.dev@pleyer.org>"]
edition = "2021"
license = "GPL-2.0"
repository = "https://github.com/jonaspleyer/cellular_raza"
keywords = ["cell", "cellular", "simulation"]
categories = ["science", "mathematics", "simulation"]
homepage = "https://cellular-raza.com/"

[workspace.dependencies]
num = "0.4"
itertools = "0.12"
plotters = { version="0.3", default-features = false, features=[
        "bitmap_backend", "bitmap_encoder", "bitmap_gif",
        "svg_backend",
        "chrono",
        # "ttf",
        "image",
        "deprecated_items",  "all_series", "all_elements",
        "full_palette",
        "colormaps"
]}
rand = { version="0.8", features = ["small_rng"] }
rand_chacha = { version="0.3.1", features=["serde1"] }
serde = "1.0"
tempdir = "0.3"
nalgebra = { version="0.32", features=["serde-serialize", "rand"]}
