[workspace]
members = [
    "cellular_raza-benchmarks",
    "cellular_raza-concepts",
    "cellular_raza-core",
    "cellular_raza-core-proc-macro",
    "cellular_raza-building-blocks",

    # Examples
    "cellular_raza-examples/*",
]
resolver = "2"

[workspace.package]
version = "0.1.6"
authors = ["Jonas Pleyer <jonas.dev@pleyer.org>"]
edition = "2021"
license = "GPL-2.0"
repository = "https://github.com/jonaspleyer/cellular_raza"
keywords = ["cell", "cellular", "simulation"]
categories = ["science", "mathematics", "simulation"]
homepage = "https://cellular-raza.com/"

[workspace.dependencies]
num = "0.4"
itertools = "0.14"
plotters = { version="0.3", default-features = false, features=[
        "bitmap_backend", "bitmap_encoder", "bitmap_gif",
        "svg_backend",
        "chrono",
        # "ttf",
        "image",
        "deprecated_items",  "all_series", "all_elements",
        "full_palette",
        "colormaps"
]}
rand = { version="0.8", features = ["small_rng"] }
rand_chacha = { version="0.3.1", features=["serde1"] }
serde = "1.0"
tempdir = "0.3"
nalgebra = { version="<0.34, >=0.30", features=["serde-serialize", "rand"]}
pyo3 = { version = "<0.24, >=0.22", features = ["serde", "py-clone"]}
