[workspace]
members = [
    "cellular_raza",
    "cellular_raza-benchmarks",
    "cellular_raza-concepts",
    "cellular_raza-core",
    "cellular_raza-core-proc-macro",
    "cellular_raza-building-blocks",

    # Examples
    "cellular_raza-examples/*",
]
resolver = "2"

[workspace.package]
version = "0.5.0"
authors = ["Jonas Pleyer <jonas.dev@pleyer.org>"]
edition = "2024"
license = "GPL-2.0"
repository = "https://github.com/jonaspleyer/cellular_raza"
keywords = ["cell", "cellular", "simulation"]
categories = ["science", "mathematics", "simulation"]
homepage = "https://cellular-raza.com/"

[workspace.dependencies]
num = "0.4"
itertools = "0.14"
plotters = { version="0.3", default-features = false, features=[
        "bitmap_backend", "bitmap_encoder", "bitmap_gif",
        "svg_backend",
        "chrono",
        # "ttf",
        "image",
        "deprecated_items",  "all_series", "all_elements",
        "full_palette",
        "colormaps"
]}
rand = { version="0.9", features = ["small_rng"] }
rand_distr = "0.5"
rand_chacha = { version="0.9", features=["serde"] }
serde = "1.0"
tempfile = "3"
nalgebra = { version="0.34", features=["serde-serialize", "rand"]}
ndarray = { version = ">=0.15", features = ["blas", "serde", "serde-1"] }
pyo3 = { version = ">=0.24", features = ["serde", "py-clone"]}
kdam = "0.6"
approx = { git = "https://github.com/brendanzab/approx", branch = "approxim-merge" }
