[package]
name = "cellular_raza-benchmarks"
description = "cellular_raza benchmarks"
readme = "README.md"
documentation = "https://docs.rs/cellular_raza-benchmarks"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
homepage.workspace =  true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = { workspace = true, features=["small_rng"] }
rand_chacha = { workspace = true, features=["serde1"]}
nalgebra = { version="0.32", features=["serde-serialize"]}
serde = { workspace = true }
num = { workspace = true }
criterion = { version = "0.4", features = ["html_reports"] }
clap = { version = "4.5.7", features = ["derive"] }
kdam = "0.5.2"
serde_json = "1.0.118"
glob = "0.3.1"
tempdir.workspace = true

[dependencies.cellular_raza]
path = "../cellular_raza"
version = "0.0.12"

[features]
default = ["gradients"]
pyo3 = ["cellular_raza/pyo3"]
gradients = ["cellular_raza/gradients"]

[[bin]]
name = "cell_sorting"
path = "src/cell_sorting.rs"
