[package]
name = "cellular_raza-building-blocks"
description = "cellular_raza Building Blocks"
readme = "README.md"
documentation = "https://docs.rs/cellular_raza-building-blocks"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[package.metadata.docs.rs]
rustdoc-args = ["--cfg", "doc_cfg", "--html-in-header", ".docs-header.html" ]
all-features = true

[dependencies]
plotters = { workspace = true }
num = { workspace = true }
rand = { workspace = true, features=["small_rng"] }
rand_distr = { version="0.4", features = ["serde1"]}
rand_chacha = { workspace = true, features=["serde1"]}
nalgebra = { version="0.32", features=["serde-serialize", "rand"]}
serde = { workspace = true }
itertools = { workspace = true }
rayon = { version="1.6" }
pyo3 = { version = "0.20", optional=true, features=["serde"] }

[dependencies.cellular_raza-concepts]
path = "../cellular_raza-concepts"
version = "0.0.6"

[dependencies.cellular_raza-concepts-derive]
path = "../cellular_raza-concepts-derive"
version = "0.0.6"

[features]
default = ["gradients"]
pyo3 = ["dep:pyo3"]

# Simulation aspects
gradients = []
