[package]
name = "cellular_raza-concepts"
description = "cellular_raza concepts"
readme = "README.md"
documentation = "https://docs.rs/cellular_raza-concepts"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
num = { workspace = true }
serde = { workspace = true }
rand_chacha = { workspace = true }
plotters = { workspace = true }

[dev-dependencies]
rand = { workspace = true }
cellular_raza-concepts-derive = { version = "0.0.5", path = "../cellular_raza-concepts-derive" }

[features]
default = ["gradients"]

# Simulation aspects
gradients = []
