[package]
name = "cellular_raza-concepts"
description = "cellular_raza concepts"
readme = "README.md"
documentation = "https://docs.rs/cellular_raza-concepts"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
homepage.workspace =  true

[package.metadata.docs.rs]
rustdoc-args = []
all-features = true

[dependencies]
num = { workspace = true }
serde = { workspace = true }
rand_chacha = { workspace = true }
plotters = { workspace = true, optional = true }
pyo3 = { workspace = true, optional = true }

[dependencies.cellular_raza-concepts-derive]
path = "../cellular_raza-concepts-derive"
version = "0.3.2-rc1"

[dev-dependencies]
rand = { workspace = true }

[features]
default = ["gradients"]
gradients = []
plotters = ["dep:plotters"]
pyo3 = ["dep:pyo3"]
