[package]
name = "cellular_raza-core-derive"
description = "Cellular simulation tool"
readme = "README.md"
documentation = "https://docs.rs/cellular_raza-core-derive"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
autoexamples = false

[lib]
proc-macro = true

[dependencies]
syn = "2.0"
quote = "1.0"
itertools = { workspace = true }

[dependencies.cellular_raza-concepts]
path = "../cellular_raza-concepts"
version = "0.0.3"
