[package]
name = "cellular_raza-core-derive"
description = "Cellular simulation tool"
readme = "README.md"
documentation = "https://docs.rs/cellular_raza-core-derive"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
autoexamples = false

[package.metadata.docs.rs]
rustdoc-args = ["--no-deps", "--document-private-items"]

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0.46", features=["full", "extra-traits"] }
quote = "1.0"
proc-macro2 = "1.0"
