[package]
name = "cellular_raza-core-proc-macro"
description = "Cellular simulation tool"
readme = "README.md"
documentation = "https://docs.rs/cellular_raza-core-proc-macro"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
homepage.workspace =  true

[package.metadata.docs.rs]
rustdoc-args = ["--document-private-items"]

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0.46", features=["full", "extra-traits"] }
quote = "1.0"
proc-macro2 = "1.0"
itertools.workspace = true
