[package]
name = "cellular_raza-core"
description = "Cellular simulation tool"
readme = "README.md"
documentation = "https://docs.rs/cellular_raza-core"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
homepage.workspace =  true

[package.metadata.docs.rs]
rustdoc-args = [ "--html-in-header", ".docs-header.html" ]
all-features = true

[dependencies]
# Core
crossbeam-channel = { version="0.5" }
hurdles = { version="1.0" }
itertools = { workspace = true }
num = { workspace = true }
# ode_integrate = { version="0.0.2" }
plotters = { workspace = true }
rayon = { version="1.6" }
kdam = { version="0.5", features = ["template", "rayon"] }

# Storage
bincode = "1.3"
serde = { workspace = true }
quick-xml = { version="0.36", features=["serialize"]}
serde_json = { version="1.0" }
ron = "0.8"
sled = { version="0.34" }
chrono = { version = "0.4.31", optional = true }
tracing = { version = "0.1.40", optional = true }
tracing-subscriber = { version = "0.3.18", optional = true }

# Implementation dependencies
rand = { workspace = true }
rand_chacha = { workspace = true }
pyo3 = { workspace = true, optional=true, features=["serde", "py-clone"] }
circ_buffer = { version = "0.1.7", features = ["serde"] }

[dependencies.cellular_raza-concepts]
path = "../cellular_raza-concepts"
version = "0.1.3"

[dependencies.cellular_raza-core-proc-macro]
path = "../cellular_raza-core-proc-macro"
version = "0.1.3"

[dev-dependencies]
tempdir.workspace = true

[features]
default = ["gradients", "timestamp"]
tracing = ["dep:tracing", "dep:tracing-subscriber"]
timestamp = ["dep:chrono"]
gradients = ["cellular_raza-concepts/gradients"]
pyo3 = ["dep:pyo3"]

# [profile.release]
# debug = 1
