[package]
authors = ["Jonas Pleyer <jonas.pleyer@fdm.uni-freiburg.de>"]
name = "cellular_raza"
version.workspace = true
edition = "2021"
license = "GPL-2.0"
description = "Cellular simulation tool"
readme = "README.md"
repository = "https://github.com/jonaspleyer/cellular_raza"
keywords = ["cell", "cellular", "simulation"]
categories = ["science", "mathematics", "simulation"]
autoexamples = false
homepage.workspace =  true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[package.metadata.docs.rs]
rustdoc-args = ["--html-in-header", ".docs-header.html" ]
all-features = true

[dependencies.cellular_raza-core]
path = "../cellular_raza-core"
version = "0.1.6"

[dependencies.cellular_raza-building-blocks]
path = "../cellular_raza-building-blocks"
version = "0.1.6"

[dependencies.cellular_raza-concepts]
path = "../cellular_raza-concepts"
version = "0.1.6"

[dev-dependencies]
num.workspace = true
rand_chacha.workspace = true
serde.workspace = true
rand.workspace = true
tempdir.workspace = true
nalgebra.workspace = true
ode_integrate = "0.0.2"

[features]
default = ["gradients", "timestamp"]
tracing = ["cellular_raza-core/tracing"]
timestamp = ["cellular_raza-core/timestamp"]
gradients = ["cellular_raza-concepts/gradients", "cellular_raza-core/gradients", "cellular_raza-building-blocks/gradients"]
pyo3 = ["cellular_raza-building-blocks/pyo3", "cellular_raza-core/pyo3"]
