[package]
authors = ["Jonas Pleyer <jonas.pleyer@fdm.uni-freiburg.de>"]
name = "cellular_raza"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Cellular Agent-based Modeling from a Clean Slate"
readme = "README.md"
repository = "https://github.com/jonaspleyer/cellular_raza"
keywords = ["cell", "cellular", "simulation"]
categories = ["science", "mathematics", "simulation"]
autoexamples = false
homepage.workspace =  true
include = [
    "logos/",
    "src/",
    "tests/",
    ".docs-header.html"
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[package.metadata.docs.rs]
rustdoc-args = ["--html-in-header", ".docs-header.html" ]
all-features = true

[dependencies.cellular_raza-core]
path = "../cellular_raza-core"
version = "0.2.1"

[dependencies.cellular_raza-building-blocks]
path = "../cellular_raza-building-blocks"
version = "0.2.1"

[dependencies.cellular_raza-concepts]
path = "../cellular_raza-concepts"
version = "0.2.1"

[dev-dependencies]
num.workspace = true
rand_chacha.workspace = true
serde.workspace = true
rand.workspace = true
tempfile.workspace = true
nalgebra.workspace = true
ode_integrate = "0.0.2"

[features]
default = ["timestamp", "chili"]
tracing = ["cellular_raza-core/tracing"]
timestamp = ["cellular_raza-core/timestamp"]
gradients = ["cellular_raza-concepts/gradients", "cellular_raza-core/gradients", "cellular_raza-building-blocks/gradients"]
pyo3 = ["cellular_raza-building-blocks/pyo3", "cellular_raza-core/pyo3"]

cpu_os_threads = ["cellular_raza-core/cpu_os_threads"]
chili = ["cellular_raza-core/chili"]
cara = ["cellular_raza-core/cara"]
elli = ["cellular_raza-core/elli"]
