[package]
name = "cellular_raza-autophagy"
version = "0.1.0"
edition = "2021"
authors = ["Jonas Pleyer <jonas.pleyer@fdm.uni-freiburg.de>"]

[dependencies]
serde = { version="1.0", features=["rc"] }
rand = { version="0.8", features = ["small_rng"] }
rand_chacha = { version="0.3.1" }
nalgebra = { version="0.32" }
cellular_raza = { path="../../cellular_raza", default-features=false }
num = "0.4"
