[package]
authors = ["Jonas Pleyer <jonas.pleyer@fdm.uni-freiburg.de>"]
name = "cr_autophagy_pyo3"
version = "0.1.0"
edition = "2021"

[lib]
name = "cr_autophagy_pyo3"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.20.0", features = ["extension-module"] }
serde = { version="1.0", features=["rc"] }
rand = { version="0.8", features = ["small_rng"] }
rand_chacha = { version="0.3.1" }
nalgebra = { version="0.32" }
cellular_raza = { path="../../cellular_raza", default-features=false }
num = "0.4"
itertools = "0.11"
rayon = "1.7"
kdam = { version = "0.5" }
