[package]
authors = ["Jonas Pleyer <jonas.pleyer@fdm.uni-freiburg.de>"]
name = "cr_autophagy_pyo3"
version = "0.1.0"
edition = "2021"

[lib]
name = "cr_autophagy_pyo3"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version="0.20", features = ["extension-module"] }
serde = { workspace = true, features=["rc"] }
serde_json = { version = "1.0" }
rand = { workspace = true, features=["small_rng"] }
rand_chacha = { workspace = true }
nalgebra = { version="0.32" }
cellular_raza = { path="../../cellular_raza", features=["pyo3"] }
num = { workspace = true }
itertools = { workspace = true }
rayon = "1.7"

[features]
default = ["pyo3"]
pyo3 = []
