[package]
name = "cr_bacterial_rods"
version = "0.1.0"
edition = "2021"
authors = ["Jonas Pleyer <jonas.pleyer@fdm.uni-freiburg.de>"]

[dependencies]
serde = { workspace = true }
rand = { workspace = true, features=["small_rng"] }
rand_chacha = { workspace = true }
nalgebra = { workspace = true }
cellular_raza = { path="../../cellular_raza", features=["tracing"] }
num = { workspace = true }
itertools.workspace = true
rand_distr = "0.5.0"

