[package]
name = "cr_cell_sorting"
version = "0.1.0"
edition = "2021"
authors = ["Jonas Pleyer <jonas.pleyer@fdm.uni-freiburg.de>"]

[dependencies]
serde = { workspace = true, features=["rc"] }
rand = { workspace = true, features=["small_rng"] }
rand_chacha = { workspace = true }
nalgebra = { workspace = true }
cellular_raza = { path="../../cellular_raza" }
num = { workspace = true }

[[bin]]
name = "cr_cell_sorting_default"
path = "src/main.rs"

[[bin]]
name = "cr_cell_sorting_langevin"
path = "src/main-langevin.rs"

[[bin]]
name = "cr_cell_sorting_brownian"
path = "src/main-brownian.rs"
