[package]
name = "collision-detection"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
homepage.workspace = true

[dependencies]
cellular_raza = { version = "0.4.0", path = "../../cellular_raza" }
nalgebra.workspace = true
num.workspace = true
rand.workspace = true
rand_chacha.workspace = true
serde = { workspace = true, features = ["derive"] }
