[package]
name = "cr_diffusion"
version = "0.1.0"
edition = "2021"
authors = ["Jonas Pleyer <jonas.pleyer@fdm.uni-freiburg.de>"]

[dependencies]
serde = { workspace = true }
rand = { workspace = true, features=["small_rng"] }
rand_chacha = { workspace = true }
nalgebra = { workspace = true }
cellular_raza = { path="../../cellular_raza", features=["default"] }
num = { workspace = true }
rayon = "1.8"
kdam = { workspace = true, features = ["template"] }
ndarray = { version = "0.16" }
plotters = { workspace = true }
tracing = "0.1.40"
