[package]
name = "cr_immersed_boundary"
version = "0.1.0"
edition = "2021"
authors = ["Jonas Pleyer <jonas.pleyer@fdm.uni-freiburg.de>"]
homepage.workspace =  true

[dependencies]
serde = { workspace = true }
rand = { workspace = true, features=["small_rng"] }
rand_chacha = { workspace = true }
nalgebra = { version="0.32" }
cellular_raza = { path="../../cellular_raza", features=["default"] }
num = { workspace = true }
rayon = "1.8"
kdam = { version="0.5", features = ["template"] }
ndarray = { version = "0.15.6" }
plotters = { workspace = true }
tracing = "0.1.40"
