[package]
name = "cr_immersed_boundary"
version = "0.1.0"
edition = "2021"
authors = ["Jonas Pleyer <jonas.pleyer@fdm.uni-freiburg.de>"]
homepage.workspace =  true

[dependencies]
serde = { workspace = true }
rand = { workspace = true, features=["small_rng"] }
rand_chacha = { workspace = true }
nalgebra = { workspace = true }
cellular_raza = { path="../../cellular_raza", features=["default"] }
num = { workspace = true }
rayon = "1.8"
ndarray = { version = "0.17" }
plotters = { workspace = true }
