[package]
name = "cellular_raza-example-kidney-organoid"
version = "0.1.0"
edition = "2021"
authors = ["Jonas Pleyer <jonas.pleyer@fdm.uni-freiburg.de>"]

[dependencies]
serde = { version="1.0" }
rand = { version="0.8", features = ["small_rng"] }
rand_chacha = { version="0.3.1" }
nalgebra = { version="0.32" }
cellular_raza = { path="../../cellular_raza", features=["default"] }
plotters = { version="0.3" }
num = "0.4"
