[package]
name = "cr_organoid_turing_growth"
version = "0.1.0"
edition = "2021"
authors = ["Jonas Pleyer <jonas.pleyer@fdm.uni-freiburg.de>"]

[dependencies]
serde = { workspace = true, features=["rc"] }
rand = { workspace = true, features=["small_rng"] }
rand_chacha = { workspace = true }
nalgebra = { workspace = true }
cellular_raza = { path="../../cellular_raza", default-features = false, features=["timestamp","cpu_os_threads"] }
plotters = { workspace = true }
num = { workspace = true }
