[package]
name = "cellular_raza-example-pool-model-pyo3"
version = "0.1.0"
edition = "2021"
authors = ["Jonas Pleyer <jonas.pleyer@fdm.uni-freiburg.de>"]

[lib]
name = "pool_model_pyo3"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.20.0", features = ["extension-module"] }
serde = { version="1.0", features=["rc"] }
rand = { version="0.8", features = ["small_rng"] }
rand_chacha = { version="0.3.1" }
nalgebra = { version="0.32" }
num = "0.4"
cellular_raza = { path="../../cellular_raza", features=["default"] }
plotters = { version="0.3" }
