[package]
name = "cr_pool_model_pyo3"
version = "0.1.0"
edition = "2021"
authors = ["Jonas Pleyer <jonas.pleyer@fdm.uni-freiburg.de>"]

[lib]
name = "cr_pool_model_pyo3"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.20", features = ["extension-module"] }
serde = { workspace = true, features=["rc"] }
rand = { workspace = true, features=["small_rng"] }
rand_chacha = { workspace = true }
nalgebra = { version="0.32" }
num = { workspace = true }
cellular_raza = { path="../../cellular_raza", features=["default", "pyo3"] }
plotters = { workspace = true }
