[package]
name = "cr_pool_model_pyo3"
version = "0.1.0"
edition = "2021"
authors = ["Jonas Pleyer <jonas.pleyer@fdm.uni-freiburg.de>"]

[lib]
name = "cr_pool_model_pyo3"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { workspace = true, features = ["extension-module"] }
serde = { workspace = true, features=["rc"] }
rand = { workspace = true, features=["small_rng"] }
rand_chacha = { workspace = true }
nalgebra = { workspace = true }
num = { workspace = true }
cellular_raza = { path="../../cellular_raza", default-features = false, features=["timestamp", "pyo3", "cpu_os_threads"] }
plotters = { workspace = true }
serde_json = { version="1.0" }
